4.1: API für Produktgruppen und beworbene Produkte hinter dem Feature tools
